-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
None
-
Mac OS
The javascript hsl(hue, saturation, lightness) is not work as exepected. The hue should go from 0->360 however it seems Qt uses a char for hue thus our max value is 0->255. You can prove this using the following code:
In a Canvas in the onpaint() function:
ctx.strokeStyle = 'hsl(255, 100%, 50%)';
console.log("before = " + ctx.strokeStyle);
ctx.strokeStyle = 'hsl(320, 100%, 50%)';
console.log("after = " + ctx.strokeStyle)
You will notice you get the same #hex color out of it.
For Gerrit Dashboard: QTBUG-47894 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124082,1 | Fix hue clamping in Context2D | 5.6 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
124087,2 | Fix hue clamping in Context2D | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |